# nendo_plugin_import_core

./: README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: advanced.md
src/nendo_plugin_import_core/: __init__.py  config.py  plugin.py
tests/: test_nendo_plugin_import_core.py
